extra/Deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: webui
        imagePullPolicy: Never
        # image: vurc/signdetect
        image: vurc/signdetect_ui
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
          protocol: TCP
      - name: webapi
        imagePullPolicy: Never
        image: vurc/signdetect_api
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
          protocol: TCP

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: web
# spec:
#   ports:
#   - port: 80
#     protocol: TCP
#     targetPort: 8000
#   selector:
#     app: myapp
#   type: ClusterIP
# status:
#   loadBalancer:
#     ingress:
#     - hostname: localhost
